# ica-native

./: Cargo.toml  README.md
src/: app.rs  assets.rs  main.rs
src/app/: chat_groups.rs  custom_chat.rs  online_mode.rs  open_page.rs
