[package]
name = "ica-native"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.0"
egui = "0.32.0"
egui_extras = { version = "0.32.0", features = ["all_loaders"] }

anyhow = "1.0.98"

foldhash = "0.1.5"
ed25519-dalek = { version = "2.1" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.6"
toml = "0.9.4"

rust_socketio = { git = "https://github.com/nextdata-tech/rust-socketio.git", branch = "tyler/feat-add-features-for-other-tls-types", default-features = false, features = [
    "async",
    "rustls-tls-native-roots",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-native-roots",
] }
base64 = "0.22.1"
